crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__explain_tests__explain__select_by_pk.snap
---
source: crates/tests/databases-tests/src/citus/explain_tests.rs
expression: result.details.query
---
EXPLAIN
SELECT
  row_to_json("%1_universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%2_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_public.Album"."Title" AS "Title"
            FROM
              "public"."Album" AS "%0_public.Album"
            WHERE
              ("%0_public.Album"."AlbumId" = 35)
          ) AS "%2_rows"
      ) AS "%2_rows"
  ) AS "%1_universe"
